# libhybris

hybris/: configure.ac  cross_file  meson.build  meson_cross_process64.py  meson_options.txt
hybris/common/: Makefile.am  hooks.c  hooks_shm.c  meson.build
hybris/common/jb/: dlfcn.c
hybris/common/mm/: Makefile.am  dlfcn.cpp  linker.cpp
hybris/common/n/: Makefile.am
hybris/common/o/: Makefile.am  linker.cpp
hybris/common/q/: Makefile.am  dlfcn.cpp  hybris_compat.cpp  hybris_compat.h  linker.cpp  linker_exidx_static.c  linker_namespaces.cpp  linker_soinfo.cpp  meson.build
hybris/common/q/bionic/libc/include/: stdatomic.h
hybris/common/q/bionic/libc/include/sys/: cdefs-android.h
hybris/common/q/bionic/libc/private/: ScopedSignalBlocker.h
hybris/glesv1/: meson.build
hybris/libsync/: sync.c
hybris/tests/: test_camera.cpp  test_input.c
